--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -248,6 +248,11 @@ DOCTYPE html>
                         <p id="recentRegistrations">Loading...</p>
                         <i class="fas fa-user-plus"></i>
                     </div>
+                    <div class="stat-card">
+                        <h4>EE Auto Group Deals</h4>
+                        <p id="eeAutoDeals">Loading...</p>
+                        <i class="fas fa-handshake"></i>
+                    </div>
                 </div>
                 
                 <!-- User status breakdown -->
@@ -290,6 +295,21 @@ DOCTYPE html>
                     <h3>Fetched User Profiles</h3>
                     <div id="profilesDataContent" class="data-content">
                         <p class="placeholder-text">Click "Fetch All User Profiles" to see the data here.</p>
+                    </div>
+                </div>
+
+                <div class="activity-feed-grid">
+                    <div class="activity-card">
+                        <h4><i class="fas fa-qrcode"></i> Recent QR Scans</h4>
+                        <ul class="activity-list" id="qrScansFeed">
+                            <!-- Scan data will be loaded here -->
+                        </ul>
+                    </div>
+                    <div class="activity-card">
+                        <h4><i class="fas fa-user-plus"></i> New User Registrations</h4>
+                        <ul class="activity-list" id="newUserFeed">
+                            <!-- User data will be loaded here -->
+                        </ul>
                     </div>
                 </div>
                 <!-- More detailed sections like recent activity, quick actions etc. -->
