--- a/verify-member.html
+++ b/verify-member.html
@@ -612,6 +612,25 @@
                     throw new Error('Member not found');
                 }
                 
+                // If member is found, log the scan
+                try {
+                    const { error: scanError } = await supabase
+                        .from('qr_code_scans')
+                        .insert({
+                            member_id: data.id, // Use the actual profile ID from the fetched data
+                            vendor_id: 'ee-auto-group' // Hardcoded for this vendor page
+                        });
+
+                    if (scanError) {
+                        console.error('Error logging QR scan:', scanError);
+                        // Don't block the UI for this, just log it
+                    } else {
+                        console.log('QR scan logged successfully for member:', data.id);
+                    }
+                } catch (e) {
+                    console.error('Exception during scan logging:', e);
+                }
+
                 // Update member display
                 document.getElementById('memberName').textContent = data.full_name || 'Unnamed Member';
                 document.getElementById('memberId').textContent = data.member_id ? `Member ID: ${data.member_id}` : '';
