--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -239,19 +239,14 @@ DOCTYPE html>
                         <i class="fas fa-calendar-check"></i>
                     </div>
                     <div class="stat-card">
-                        <h4>Pending Verifications</h4>
-                        <p id="pendingVerifications">Loading...</p>
-                        <i class="fas fa-user-clock"></i>
+                        <h4>Total Events</h4>
+                        <p id="totalEvents">Loading...</p>
+                        <i class="fas fa-calendar-alt"></i>
                     </div>
                     <div class="stat-card">
                         <h4>Recent Registrations (30d)</h4>
                         <p id="recentRegistrations">Loading...</p>
                         <i class="fas fa-user-plus"></i>
-                    </div>
-                    <div class="stat-card">
-                        <h4>EE Auto Group Deals</h4>
-                        <p id="eeAutoDeals">Loading...</p>
-                        <i class="fas fa-handshake"></i>
                     </div>
                 </div>
                 
@@ -271,11 +266,6 @@ DOCTYPE html>
                         <h4>Suspended Users</h4>
                         <p id="suspendedUsers">Loading...</p>
                         <i class="fas fa-user-slash"></i>
-                    </div>
-                    <div class="stat-card">
-                        <h4>Total Events</h4>
-                        <p id="totalEvents">Loading...</p>
-                        <i class="fas fa-calendar"></i>
                     </div>
                 </div>
                 
@@ -299,20 +289,13 @@ DOCTYPE html>
                 </div>
 
                 <div class="activity-feed-grid">
-                    <div class="activity-card">
+                    <div class="activity-card full-width-card">
                         <h4><i class="fas fa-qrcode"></i> Recent QR Scans</h4>
                         <ul class="activity-list" id="qrScansFeed">
                             <!-- Scan data will be loaded here -->
                         </ul>
                     </div>
-                    <div class="activity-card">
-                        <h4><i class="fas fa-user-plus"></i> New User Registrations</h4>
-                        <ul class="activity-list" id="newUserFeed">
-                            <!-- User data will be loaded here -->
-                        </ul>
-                    </div>
                 </div>
-                <!-- More detailed sections like recent activity, quick actions etc. -->
             </section>
 
             <section id="user-management" class="admin-section dashboard-content-section">
