--- a/verify-member.html
+++ b/verify-member.html
@@ -604,13 +604,10 @@
         
         async function logQrScan(memberUuid, memberIdString) {
             if (!window.supabaseClient) return;
-            // Gather extra info (optional)
-            const deviceInfo = navigator.userAgent || '';
             const scanData = {
                 member_id: memberUuid, // UUID from URL
                 member_id_string: memberIdString, // Human-readable member ID
-                vendor_id: 'EE Auto Group',
-                device_info: deviceInfo // Optional: add this column to your table if you want to store it
+                vendor_id: 'EE Auto Group'
             };
             console.log('Logging scan to Supabase:', scanData); // Debug log
             try {
@@ -618,7 +615,7 @@
                     .from('qr_code_scans')
                     .insert(scanData);
                 if (error) {
-                    console.error('Failed to log QR scan:', error);
+                    console.error('Failed to log QR scan:', error, error.details || error.message);
                 } else {
                     console.log('QR scan logged for member:', memberUuid, memberIdString);
                 }
@@ -850,6 +847,17 @@
                 alert('Failed to log deal: ' + error.message);
                 submitBtn.disabled = false;
                 submitBtn.innerHTML = '<i class="fas fa-check"></i> Submit Deal';
+            }
+        }
+
+        // Add this utility function near the top of your main <script> block or before it is first used
+        function displayError(title, message) {
+            const errorElement = document.getElementById('errorMessage');
+            if (errorElement) {
+                errorElement.innerHTML = `<strong>${title}</strong><br>${message}`;
+                errorElement.style.display = 'block';
+            } else {
+                alert(`${title}\n${message}`); // fallback if element is missing
             }
         }
     </script>
