--- a/verify-member.html
+++ b/verify-member.html
@@ -588,7 +588,7 @@
                 await logQrScan(memberUuid, memberIdString);
                 fetchMemberInfo(memberUuid);
             } else {
-                displayError('No Member ID Provided', 'This page requires a member ID to function. Please scan a valid QR code.');
+                showError('No Member ID Provided', 'This page requires a member ID to function. Please scan a valid QR code.');
             }
         });
 
@@ -596,7 +596,7 @@
             if (window.supabase) {
                 supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
             } else {
-                displayError('Initialization Error', 'Could not connect to the verification service. Please try again later.');
+                showError('Initialization Error', 'Could not connect to the verification service. Please try again later.');
                 console.error('Supabase client is not available.');
             }
         }
@@ -623,7 +623,7 @@
 
         async function fetchMemberInfo(memberUuid) {
             if (!supabase) {
-                displayError('Service Unavailable', 'Cannot fetch member information at this time.');
+                showError('Service Unavailable', 'Cannot fetch member information at this time.');
                 return;
             }
 
@@ -637,7 +637,7 @@
                 .single();
 
             if (error || !data) {
-                displayError('Member Not Found', 'The provided member ID is invalid. Please ensure the QR code is correct.');
+                showError('Member Not Found', 'The provided member ID is invalid. Please ensure the QR code is correct.');
                 return;
             }
             
