--- a/dashboard.html
+++ b/dashboard.html
@@ -1672,30 +1672,7 @@
                     <a href="events.html" class="view-all">View All</a>
                 </div>
                 <div class="card-content" id="upcomingEventsList">
-                    <div class="event-item">
-                        <div class="event-date">
-                            <span class="event-month">MAY</span>
-                            <span class="event-day">30</span>
-                            <span class="event-year">2025</span>
-                    </div>
-                        <div class="event-info">
-                            <h3 class="event-title">Tesla Light Show Spectacular</h3>
-                            <p class="event-location" style="color: #FFFFFF !important;">
-                                <i class="fas fa-map-marker-alt"></i> Golf IT Up Parking Lot, Thornhill, ON
-                            </p>
-                            <p class="event-time" style="color: #FFFFFF !important;">
-                                <i class="fas fa-clock"></i> 7:30 PM EST
-                            </p>
-                            <div class="event-highlights">
-                                <span class="highlight-tag"><i class="fas fa-lightbulb"></i> Light Show</span>
-                                <span class="highlight-tag"><i class="fas fa-users"></i> Networking</span>
-                                <span class="highlight-tag"><i class="fas fa-camera"></i> Photo Ops</span>
-                            </div>
-                            <a href="events.html" class="btn event-btn">
-                                <i class="fas fa-info-circle"></i> Details
-                            </a>
-                        </div>
-                    </div>
+                    <p class="no-events">No upcoming events at this time</p>
                 </div>
             </div>
 
@@ -4246,32 +4223,9 @@
     function displayExampleEvent(container) {
         if (!container) return;
         
-        // Show Tesla Light Show example
+        // Show no upcoming events message
         container.innerHTML = `
-            <div class="event-item">
-                <div class="event-date">
-                    <span class="event-month">May</span>
-                    <span class="event-day">30</span>
-                    <span class="event-year">2025</span>
-                </div>
-                <div class="event-info">
-                    <h3>Tesla Light Show Spectacular</h3>
-                    <div class="event-location">
-                        <i class="fas fa-map-marker-alt"></i>
-                        Golf IT Up Parking Lot, Thornhill
-                    </div>
-                    <div class="event-time">
-                        <i class="fas fa-clock"></i>
-                        7:30 PM EST
-                    </div>
-                    <div class="event-highlights">
-                        <span class="highlight-tag"><i class="fas fa-star"></i> Featured</span>
-                    </div>
-                    <a href="events.html" class="event-btn">
-                        <i class="fas fa-info-circle"></i> More Details
-                    </a>
-                </div>
-            </div>
+            <p class="no-events">No upcoming events at this time</p>
         `;
     }
     
