--- a/contact.html
+++ b/contact.html
@@ -523,13 +523,9 @@
                 
                 <div class="success-message" id="successMessage">
                     <i class="fas fa-check-circle"></i>
-                    <strong>Message prepared successfully!</strong><br>
+                    <strong>Message sent successfully!</strong><br>
                     <small style="opacity: 0.9; margin-top: 0.5rem; display: block;">
-                        Your message has been prepared. 
-                        <a href="" style="color: white; text-decoration: underline; font-weight: 600;">
-                            Click here to open your email client
-                        </a> 
-                        and send the message to our team.
+                        Thank you for contacting us. We'll get back to you within 24 hours.
                     </small>
                 </div>
 
