--- a/contact.html
+++ b/contact.html
@@ -470,7 +470,7 @@
                         </div>
                         <div class="contact-details">
                             <h3>Email Us</h3>
-                            <p><a href="mailto:info@blitztclub.com">info@blitztclub.com</a></p>
+                            <p>info@blitztclub.com</p>
                         </div>
                     </div>
 
