--- a/delete-account.html
+++ b/delete-account.html
@@ -290,7 +290,7 @@
                     <a href="login.html">Login</a>
                     <a href="register.html">Register</a>
                     <a href="sponsors.html">Our Sponsors</a>
-                    <a href="#member-benefits">Member Benefits</a>
+                    <a href="member-benefits.html">Member Benefits</a>
                 </div>
             </div>
             
