--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@
                 <h3>Member Area</h3>
                 <div class="footer-links">
                     <a href="sponsors.html">Our Sponsors</a>
-                    <a href="#member-benefits">Member Benefits</a>
+                    <a href="member-benefits.html">Member Benefits</a>
                     <a href="#" id="footerLogoutBtn">Logout</a>
                 </div>
             </div>
