--- a/member-benefits.html
+++ b/member-benefits.html
@@ -334,7 +334,12 @@
             
             <div style="background:#fce4ec; color:#c2185b; border-radius:12px; padding:1.3rem 1.1rem; margin-bottom:1.3rem; font-size:1.08rem; display:flex; align-items:center; gap:1.1rem;">
               <i class="fas fa-credit-card" style="font-size:2rem;"></i>
-              <span><strong>Payment Terms:</strong> Cash deal only - NO TAX. Credit card payments include 13% HST.</span>
+              <span>
+                <strong style="font-size:1.08rem; color:#171a20;">Payment Information</strong><br>
+                <span style="display:block; margin:0.4em 0 0.2em 0; color:#171a20; font-weight:600;">Cash is preferred.</span>
+                <span style="display:block; margin-bottom:0.2em; color:#171a20;">Paying by <strong>cash</strong>: <u>Tax is included</u> (no additional charge).</span>
+                <span style="display:block; color:#171a20;">Paying by <strong>credit card</strong>: <u>13% HST will be added</u> to the total.</span>
+              </span>
             </div>
             
             <div style="background:#f8f6ff; color:#764ba2; border-radius:12px; padding:1.3rem 1.1rem; margin-bottom:1.3rem; font-size:1.08rem; display:flex; align-items:center; gap:1.1rem;">
