--- a/verification-success.html
+++ b/verification-success.html
@@ -360,9 +360,9 @@
                     <a href="login.html">Login</a>
                     <a href="register.html">Register</a>
                     <a href="sponsors.html">Our Sponsors</a>
-                    <a href="#member-benefits">Member Benefits</a>
-        </div>
-    </div>
+                    <a href="member-benefits.html">Member Benefits</a>
+                </div>
+            </div>
 
             <div class="footer-section">
                 <h3>Legal</h3>
