--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -422,7 +422,7 @@ DOCTYPE html>
                 <h3>Member Area</h3>
                 <div class="footer-links">
                     <a href="sponsors.html">Our Sponsors</a>
-                    <a href="#member-benefits">Member Benefits</a>
+                    <a href="member-benefits.html">Member Benefits</a>
                     <a href="#" id="footerLogoutBtn">Logout</a>
                 </div>
             </div>
