--- a/member-benefits.html
+++ b/member-benefits.html
@@ -276,7 +276,7 @@
             </div>
             <h2 style="font-size:1.3rem; color:#764ba2; font-weight:700; margin-bottom:0.7rem; text-align:center;">Window Tinting Special</h2>
             <div style="color:#393c41; font-size:1.08rem; margin-bottom:1.2rem; text-align:center;">
-              <strong>Blitz T Club Member Pricing</strong> – Show your membership and save on professional window tinting for your Tesla!
+              <strong>Blitz T Club Member Pricing</strong> – Show your membership and save on professional window tinting for your Tesla or other vehicles!
             </div>
             <table class="deal-table" style="width:100%; border-collapse:collapse; background:#f8f6ff; border-radius:10px; overflow:hidden; margin-bottom:1.2rem;">
               <thead>
@@ -319,13 +319,20 @@
                   <td style="padding:0.8rem 0.5rem; border-bottom:1px solid #ececec; text-align:center; font-weight:700; color:#d32f2f;" data-label="You Save">$180-$200 (40-43%)</td>
                 </tr>
                 <tr>
-                  <td style="padding:0.8rem 0.5rem;" data-label="Service">Best Film Package (IR Ceramic, All Except Sunroof)</td>
+                  <td style="padding:0.8rem 0.5rem;" data-label="Service">ALL IN ONE Deal (IR Ceramic, All Except Sunroof)</td>
                   <td style="padding:0.8rem 0.5rem; text-align:center; text-decoration:line-through; color:#888;" data-label="Regular Price">$620-$640</td>
                   <td style="padding:0.8rem 0.5rem; text-align:center; font-weight:700; color:#1976d2;" data-label="Member Price">$400</td>
                   <td style="padding:0.8rem 0.5rem; text-align:center; font-weight:700; color:#d32f2f;" data-label="You Save">$220-$240 (35-38%)</td>
                 </tr>
               </tbody>
             </table>
+            
+            <div style="text-align:center; margin: 2.2rem 0 1.5rem 0;">
+              <h3 style="font-size:1.18rem; color:#764ba2; font-weight:700; margin-bottom:0.7rem;">Tint Shade Ratio Reference</h3>
+              <img src="https://static.wixstatic.com/media/fd0f3d_9a1f7ea8bdfb4e6881e3385e1d268e59~mv2.jpg/v1/fill/w_836,h_283,al_c,q_80,usm_0.66_1.00_0.01,enc_avif,quality_auto/TintScale-min.jpg" alt="Tint Shade Ratio Reference" style="max-width:100%;height:auto;display:block;margin:0 auto 0.5rem auto;border-radius:10px;box-shadow:0 2px 12px rgba(23,26,32,0.08);" onerror="this.style.display='none';document.getElementById('tint-fallback').style.display='block';">
+              <div id="tint-fallback" style="display:none;color:#d32f2f;font-size:0.98rem;margin-top:0.5rem;">Image unavailable. Please <a href='https://static.wixstatic.com/media/fd0f3d_9a1f7ea8bdfb4e6881e3385e1d268e59~mv2.jpg/v1/fill/w_836,h_283,al_c,q_80,usm_0.66_1.00_0.01,enc_avif,quality_auto/TintScale-min.jpg' target='_blank' style='color:#764ba2;text-decoration:underline;'>click here</a> to view the tint shade chart.</div>
+              <div style="font-size:0.98rem; color:#393c41; margin-top:0.2rem;">Use this chart to select your preferred tint shade for your vehicle.</div>
+            </div>
             
             <div style="background:#e3f2fd; color:#1565c0; border-radius:12px; padding:1.3rem 1.1rem; margin-bottom:1.3rem; font-size:1.08rem; display:flex; align-items:center; gap:1.1rem;">
               <i class="fas fa-shield-alt" style="font-size:2rem;"></i>
