--- a/member-benefits.html
+++ b/member-benefits.html
@@ -447,5 +447,7 @@
             </p>
         </div>
     </footer>
+    <!-- JotForm Chatbot Widget -->
+    <script src='https://cdn.jotfor.ms/agent/embedjs/0197a4f8c2107841a0d93e4272525cea385d/embed.js?skipWelcome=1&maximizable=1'></script>
 </body>
 </html>
