--- a/dashboard.html
+++ b/dashboard.html
@@ -6026,5 +6026,8 @@ Blitz T Club Team`);
             }
         });
     </script>
+
+    <!-- JotForm Chatbot Widget -->
+    <script src='https://cdn.jotfor.ms/agent/embedjs/0197a4f8c2107841a0d93e4272525cea385d/embed.js?skipWelcome=1&maximizable=1'></script>
 </body>
 </html> 
