chatbot and faq

--- a/sponsors.html
+++ b/sponsors.html
@@ -291,6 +291,38 @@
         </header>
 
         <div class="sponsors-grid">
+            <!-- EE Auto Sponsor Card -->
+            <div class="sponsor-card">
+                <div class="sponsor-logo">
+                    <img src="https://static.wixstatic.com/media/fd0f3d_855a3d7ef5fb4fd0b2011973fa0a9e6a~mv2.jpg/v1/fill/w_125,h_125,al_c,q_80,usm_0.66_1.00_0.01,enc_avif,quality_auto/%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20181225133337.jpg" alt="EE Auto Group Logo" loading="lazy">
+                </div>
+                <div class="sponsor-content">
+                    <h2>EE Auto Group</h2>
+                    <p class="sponsor-category">Professional Window Tinting</p>
+                    <p class="sponsor-description">EE Auto Group is a trusted partner of Blitz T Club, offering expert window tinting services for Tesla and other vehicles. Their team delivers high-quality results with a focus on customer satisfaction and attention to detail.</p>
+                    <div class="sponsor-benefits">
+                        <h3>Exclusive Member Benefits</h3>
+                        <ul style="margin:0 0 0 1.2em; padding:0; color:#393c41;">
+                            <li>Special discounted pricing on all window tinting services for Blitz T Club members</li>
+                            <li>Lifetime warranty on all tinting services</li>
+                            <li>Tax included when paying by cash</li>
+                            <li>Show your Blitz T Club member QR code to redeem</li>
+                        </ul>
+                        <div style="margin-top:0.7em;">
+                            <a href="member-benefits.html" style="color:#764ba2;text-decoration:underline;font-weight:600;">See full member pricing & details</a>
+                        </div>
+                    </div>
+                    <div class="sponsor-contact">
+                        <p><i class="fas fa-map-marker-alt"></i> 365 John Street, Unit 1, Thornhill, ON, Canada L3T 5W5</p>
+                        <p><i class="fas fa-phone"></i> <a href="tel:905-882-1112" style="color:#764ba2; text-decoration:none; font-weight:600;">905-882-1112</a></p>
+                        <p><i class="fab fa-weixin" style="color:#07c160;"></i> WeChat: Scan QR code at location</p>
+                        <p><i class="fas fa-globe"></i> <a href="https://www.ee-auto.com/contact-us" target="_blank" rel="noopener" style="color:#764ba2; text-decoration:underline;">Visit Website</a></p>
+                    </div>
+                    <a href="https://www.ee-auto.com/contact-us" class="btn sponsor-btn" target="_blank" rel="noopener">Book Your Tinting</a>
+                </div>
+            </div>
+            <!-- End EE Auto Sponsor Card -->
+            
             <!-- Sponsor Card Template -->
             <div class="sponsor-card">
                 <div class="sponsor-logo">
@@ -331,6 +363,7 @@
                     <a href="events.html">Events</a>
                     <a href="gallery.html">Gallery</a>
                     <a href="contact.html">Contact</a>
+                    <a href="faq.html">FAQ</a>
                 </div>
             </div>
             
