--- a/index.html
+++ b/index.html
@@ -700,6 +700,7 @@
                     <a href="events.html">Events</a>
                     <a href="gallery.html">Gallery</a>
                     <a href="contact.html">Contact</a>
+                    <a href="faq.html">FAQ</a>
                 </div>
             </div>
             
