--- a/member-benefits.html
+++ b/member-benefits.html
@@ -410,6 +410,7 @@
                     <a href="events.html">Events</a>
                     <a href="gallery.html">Gallery</a>
                     <a href="contact.html">Contact</a>
+                    <a href="faq.html">FAQ</a>
                 </div>
             </div>
             <div class="footer-section">
