--- a/member-benefits.html
+++ b/member-benefits.html
@@ -371,8 +371,8 @@
                   <i class="fas fa-map-marker-alt" style="color:#764ba2; margin-right:0.5rem;"></i>Head Office
                 </div>
                 <div style="font-size:0.9rem; color:#666; line-height:1.4;">
-                  365 John Street, Unit 1<br>
-                  Thornhill, ON, Canada L3T 5W5
+                  50 Bullock Drive, Unit 3<br>
+                   Markham, ON, CANADA L3P 3P2
                 </div>
               </div>
               
