--- a/member-benefits.html
+++ b/member-benefits.html
@@ -368,7 +368,7 @@
               
               <div style="background:#f8f9fa; border-radius:10px; padding:1rem; margin-bottom:1rem; text-align:left;">
                 <div style="font-weight:700; color:#171a20; margin-bottom:0.5rem; font-size:0.95rem;">
-                  <i class="fas fa-map-marker-alt" style="color:#764ba2; margin-right:0.5rem;"></i>Head Office
+                  <i class="fas fa-map-marker-alt" style="color:#764ba2; margin-right:0.5rem;"></i>Window Tinting Shop
                 </div>
                 <div style="font-size:0.9rem; color:#666; line-height:1.4;">
                   50 Bullock Drive, Unit 3<br>
