update vendor system

--- a/verify-member.html
+++ b/verify-member.html
@@ -460,7 +460,7 @@
                 <h3><i class="fas fa-user-shield"></i> Vendor Access</h3>
                 <div class="input-group">
                     <label for="vendorPassword">Enter Vendor Password</label>
-                    <input type="password" id="vendorPassword" class="input-field" placeholder="Enter password">
+                    <input type="text" id="vendorPassword" class="input-field" placeholder="Enter password">
                 </div>
                 <button id="vendorLoginBtn" class="btn btn-primary">
                     <i class="fas fa-sign-in-alt"></i>
