update blitz shop

--- a/blitz-shop.html
+++ b/blitz-shop.html
@@ -2915,12 +2915,7 @@
             </button>
           </div>
         </div>
-        <div class="mobile-menu-footer">
-          <button class="mobile-back-btn" onclick="window.location.href='dashboard.html'">
-            <i class="fas fa-arrow-left"></i>
-            Back to Dashboard
-          </button>
-        </div>
+        <!-- Removed mobile-menu-footer with back button -->
       </div>
     </div>
 </body>
