update blitz shop

--- a/blitz-shop.html
+++ b/blitz-shop.html
@@ -2544,6 +2544,13 @@
             letter-spacing: 0.8px !important;
           }
         }
+
+        /* Add to the style section */
+        @media (min-width: 769px) {
+          #mobile-menu {
+            display: none !important;
+          }
+        }
     </style>
 </head>
 <body>
