update blitz shop

--- a/blitz-shop.html
+++ b/blitz-shop.html
@@ -2551,6 +2551,48 @@
             display: none !important;
           }
         }
+
+        /* Add to the style section */
+        .cart-count-badge {
+          position: absolute;
+          top: 4px;
+          right: 18px;
+          background: #00e676;
+          color: #fff;
+          font-size: 12px;
+          font-weight: 700;
+          border-radius: 50%;
+          padding: 2px 6px;
+          min-width: 18px;
+          text-align: center;
+          z-index: 2;
+          box-shadow: 0 1px 4px rgba(0,0,0,0.08);
+          pointer-events: none;
+          display: inline-block;
+        }
+
+        /* Add to the style section */
+        .cart-icon-wrapper {
+          position: relative;
+          display: inline-block;
+        }
+        .cart-count-badge {
+          position: absolute;
+          top: -4px;
+          right: -10px;
+          background: #00e676;
+          color: #fff;
+          font-size: 12px;
+          font-weight: 700;
+          border-radius: 50%;
+          padding: 2px 6px;
+          min-width: 18px;
+          text-align: center;
+          z-index: 2;
+          box-shadow: 0 1px 4px rgba(0,0,0,0.08);
+          pointer-events: none;
+          display: inline-block;
+        }
     </style>
 </head>
 <body>
@@ -2621,7 +2663,10 @@
                 <span>Filter</span>
             </div>
             <div class="bottom-nav-item" data-action="cart">
-                <i class="fas fa-shopping-cart"></i>
+                <span class="cart-icon-wrapper" style="position: relative; display: inline-block;">
+                  <i class="fas fa-shopping-cart"></i>
+                  <span class="cart-count-badge" id="mobile-cart-count">0</span>
+                </span>
                 <span>Cart</span>
             </div>
             <div class="bottom-nav-item" data-action="profile">
